// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaViewer - schema composition test allOf 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <span
      className="badge badge--info"
    >
      allOf
    </span>
    <div
      className="tabs-container"
    >
      <ul
        aria-orientation="horizontal"
        className="tabs"
        role="tablist"
      >
        <li
          aria-selected={true}
          onClick={[Function]}
          tabIndex={0}
        >
          1
        </li>
        <li
          aria-selected={false}
          onClick={[Function]}
          tabIndex={-1}
        >
          2
        </li>
      </ul>
      <div>
        <div
          hidden={false}
          role="tabpanel"
        >
          <div
            role="tabpanel"
          >
            <strong>
              type
            </strong>
             : 
            <span
              style={
                {
                  "opacity": "0.6",
                }
              }
            >
              string
            </span>
            <div
              style={
                {
                  "marginTop": "var(--ifm-table-cell-padding)",
                }
              }
            />
          </div>
        </div>
        <div
          hidden={true}
          role="tabpanel"
        >
          <div
            role="tabpanel"
          >
            <strong>
              type
            </strong>
             : 
            <span
              style={
                {
                  "opacity": "0.6",
                }
              }
            >
              string
            </span>
            <div
              style={
                {
                  "marginTop": "var(--ifm-table-cell-padding)",
                }
              }
            >
              <div>
                <strong>
                  Length :
                </strong>
                 
                <code>
                  &lt;= 5 character(s)
                </code>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - schema composition test anyOf 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <span
      className="badge badge--info"
    >
      anyOf
    </span>
    <div
      className="tabs-container"
    >
      <ul
        aria-orientation="horizontal"
        className="tabs"
        role="tablist"
      >
        <li
          aria-selected={true}
          onClick={[Function]}
          tabIndex={0}
        >
          1
        </li>
        <li
          aria-selected={false}
          onClick={[Function]}
          tabIndex={-1}
        >
          2
        </li>
      </ul>
      <div>
        <div
          hidden={false}
          role="tabpanel"
        >
          <div
            role="tabpanel"
          >
            <strong>
              type
            </strong>
             : 
            <span
              style={
                {
                  "opacity": "0.6",
                }
              }
            >
              string
            </span>
            <div
              style={
                {
                  "marginTop": "var(--ifm-table-cell-padding)",
                }
              }
            >
              <div>
                <strong>
                  Length :
                </strong>
                 
                <code>
                  &lt;= 5 character(s)
                </code>
              </div>
            </div>
          </div>
        </div>
        <div
          hidden={true}
          role="tabpanel"
        >
          <div
            role="tabpanel"
          >
            <strong>
              type
            </strong>
             : 
            <span
              style={
                {
                  "opacity": "0.6",
                }
              }
            >
              number
            </span>
            <div
              style={
                {
                  "marginTop": "var(--ifm-table-cell-padding)",
                }
              }
            >
              <div>
                <strong>
                  Possible values :
                </strong>
                 
                <code>
                  &gt;= 0
                </code>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - schema composition test not 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <span
      className="badge badge--info"
    >
      not
    </span>
    <br />
    <strong>
      type
    </strong>
     : 
    <span
      style={
        {
          "opacity": "0.6",
        }
      }
    >
      string
    </span>
    <div
      style={
        {
          "marginTop": "var(--ifm-table-cell-padding)",
        }
      }
    />
  </div>
</details>
`;

exports[`JSONSchemaViewer - schema composition test oneOf 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <span
      className="badge badge--info"
    >
      oneOf
    </span>
    <div
      className="tabs-container"
    >
      <ul
        aria-orientation="horizontal"
        className="tabs"
        role="tablist"
      >
        <li
          aria-selected={true}
          onClick={[Function]}
          tabIndex={0}
        >
          1
        </li>
        <li
          aria-selected={false}
          onClick={[Function]}
          tabIndex={-1}
        >
          2
        </li>
      </ul>
      <div>
        <div
          hidden={false}
          role="tabpanel"
        >
          <div
            role="tabpanel"
          >
            <strong>
              type
            </strong>
             : 
            <span
              style={
                {
                  "opacity": "0.6",
                }
              }
            >
              number
            </span>
            <div
              style={
                {
                  "marginTop": "var(--ifm-table-cell-padding)",
                }
              }
            >
              <div>
                <strong>
                  Possible values :
                </strong>
                 
                <code>
                  multiple of 5
                </code>
              </div>
            </div>
          </div>
        </div>
        <div
          hidden={true}
          role="tabpanel"
        >
          <div
            role="tabpanel"
          >
            <strong>
              type
            </strong>
             : 
            <span
              style={
                {
                  "opacity": "0.6",
                }
              }
            >
              number
            </span>
            <div
              style={
                {
                  "marginTop": "var(--ifm-table-cell-padding)",
                }
              }
            >
              <div>
                <strong>
                  Possible values :
                </strong>
                 
                <code>
                  multiple of 3
                </code>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</details>
`;
